--- a/new_index.html
+++ b/new_index.html
@@ -35,7 +35,8 @@
 
   <!-- Welcome card -->
   <div class="desc-card" id="welcomeCard">
-    <h1>Let's start annotation tasks!</h1>
+    <h1>Let's start annotation tasks! </h1>
+    <h2> Please pay attention to the description screen. </h2>
     <div class="buttons"><button id="beginBtn" style="background:#1e90ff;">Begin</button></div>
   </div>
 
